styles/styles.css
/* ... */
.login-btn:hover {
  background-color: #015fbd;
}
.signup a {
  text-decoration: none;
  color: #007bff;
}
.signup a:hover {
  text-decoration: underline;
}

/******************OUR TEAM PAGE STYLES******************/

.team img {
  border-radius: 5%;
  height: 250px;
  width: 200px;
  object-fit: cover;
  cursor: pointer;
  transition: transform 0.3s; /* Add a hover effect */
}

.team img:hover {
  transform: scale(1.05); /* Scale up on hover */
}

.team {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  background: linear-gradient(to bottom right, #4a6d99, transparent);
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
  padding: 20px;
}

.tmembers {
  text-align: center;
  background: linear-gradient(
    167deg,
    #4a6d99,
    transparent
  ); /* Softer gradient */
  padding: 3%;
  border-radius: 10px;
}

.tmembers h2,
.tmembers p {
  color: #000000;
  margin: 10px 0;
}

.team h3 {
  text-align: center;
  color: #000000;
}

.member-info {
  display: none;
  color: #555;
}

.member-info.active {
  display: block;
}

.team-info {
  display: flex;
  flex-direction: column; /* Change to column for small screens */
  align-items: center;
  background-color: #f8f9fa;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
  border-radius: 8px;
  height: auto; /* Change to auto to accommodate content */
  margin: 20px;
  padding: 2%;
}

.team-info h3 {
  text-align: center;
  margin-bottom: 10px; /* Add spacing below the heading */
  color: #1c1c1c;
}

.team-info #image-container {
  width: 250px;
  height: 250px;
  overflow: hidden; /* Hide overflow if image is larger */
  border-radius: 20px;
  margin: 10px auto; /* Center container */
  border: 2px solid #4a6d99; /* Border for the image container */
}

.team-info img {
  width: 100%; /* Adjust width as needed */
  height: 100%; /* Maintain aspect ratio */
  border-radius: 20px;
  object-fit: cover;
}

.team-info p {
  color: #555;
  display: block; /* Ensure paragraph is displayed */
  text-align: justify;
}

.tmember1,
.tmember2,
.tmember3 {
  padding: 2%;
}

/****************** ABOUT PAGE STYLING ******************/
main {
  padding: 20px;
  background-color: #f4f4f4;
}

main h2 {
  text-align: center;
  color: #003366;
  margin-bottom: 20px;
}

.activity-grid,
.destination-grid,
.seasonal-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  gap: 20px;
  margin-bottom: 40px;
}

.activity,
.destination,
.season {
  background-color: #fff;
  border: 1px solid #ddd;
  border-radius: 10px;
  padding: 15px;
  text-align: center;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

.activity img,
.destination img,
.season img {
  max-width: 100%;
  height: 300px;
  border-radius: 10px;
}

.activity h3,
.destination h3,
.season h3 {
  margin: 15px 0 10px;
  color: #003366;
}

/* Button for Learn More Links */
.btn {
  display: inline-block;
  padding: 10px 15px;
  background-color: #003366;
  color: #fff;
  border-radius: 5px;
  text-decoration: none;
  transition: background-color 0.3s ease;
}

.btn:hover {
  background-color: #00509e;
}

/* Travel Tips Section */
.travel-tips ul {
  list-style: none;
  padding: 0;
}

.travel-tips li {
  background-color: #fff;
  margin-bottom: 10px;
  padding: 10px;
  border-left: 5px solid #003366;
}

@media (min-width: 37.5em) /*600px / 16px = 37.5em*/ /* @media (max-width: 1920px) and (min-width: 320px) */ {
  .nav-bar {
    grid-template-columns: 1fr 450px;
    grid-template-areas: 'logo nav';
  }

  .nav-bar .menu-btn {
    display: none;
  }
  .nav-bar nav {
    display: block;
  }
  .nav-bar ul {
    display: flex;
    align-items: center;
  }

  .nav-bar ul li {
    flex: 1;
    margin-top: 0px;
  }

  .nav-bar ul li:last-child {
    margin-bottom: 0px;
  }

  .nav-bar nav a {
    padding: 0;
    text-align: center;
  }

  /****************** OUR-TEAM PAGE ******************/
  .team-info {
    display: flex;
    flex-direction: row;
  }
  .team-info p {
    margin: 0 20px;
    display: block;
    text-align: justify;
    flex: 6;
  }
  .team-info h3 {
    text-align: center;
    flex: 1;
    margin: 0 10px;
  }
  .team-info img {
    flex: 1;
    width: 250px;
    aspect-ratio: 3/2;
    object-fit: cover;
    border-radius: 20px;
    height: 100%;
  }
  .team img {
    width: 400px;
  }

  /****************** LOGIN PAGE ******************/
  .login-box {
    width: 500px;
  }
}

/*
  ========================================================================================
  HOMEPAGE styles start
  ========================================================================================
*/

:root {
  --all-black: #000000;
  --primary-black: #222222;
  --primary-neon-green: #c7fe46;
  --primary-neon-blue: #3edfd4;
  --primary-medium-blue: #2723ff;
  --primary-white: #ffffff;
  --title-stroke-width: 0.2rem;
  --title-stroke-width-neg: -0.2rem;
  --banner-desktop-height: 600px;
  --nav-desktop-height: 60px;
}

.home-container h1 span {
  font-family: 'Barlow Condensed', sans-serif;
  font-weight: 700;
  font-style: italic;
  text-transform: uppercase;
  font-size: calc(3rem + 5vw);
  line-height: calc(3rem + 3vw);
  color: var(--primary-neon-green);
  padding-left: 0.8rem;
}

.title-black-box {
  padding-top: 2vw;
  background-color: var(--primary-black);
}

.home-container h1 .title-whistler {
  padding-left: 1.4rem;
  font-family: 'Climate Crisis', serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  font-variation-settings: 'YEAR' 2000;
  text-transform: uppercase;
  letter-spacing: 1px;
  color: var(--primary-black);
  font-size: calc(2rem + 5vw);
  line-height: calc(1rem + 3vw);
}
/* ... */

